# building-ml-system

./: .gitignore  LICENSE  README.md  makefile  mypy.ini  pyproject.toml  requirements.txt
chapter1_ml_system/demand_forecasting/: Dockerfile  pyproject.toml  requirements.txt
chapter1_ml_system/demand_forecasting/.dvc/: config
chapter1_ml_system/demand_forecasting/dataset/: .gitignore  demand-forecasting-kernels-only.zip.dvc  train.csv.dvc
chapter1_ml_system/demand_forecasting/evaluate/: pyproject.toml
chapter1_ml_system/demand_forecasting/predict/: pyproject.toml
chapter2_demand_forecasting_with_ml/beverage_sales_forecasting/data_registration/: Dockerfile  pyproject.toml
chapter2_demand_forecasting_with_ml/beverage_sales_forecasting/data_registration/src/: main.py
chapter2_demand_forecasting_with_ml/demand_forecasting/bi/: Dockerfile  pyproject.toml  requirements.txt
chapter2_demand_forecasting_with_ml/demand_forecasting/bi/src/: configurations.py  constants.py  main.py  model.py  view.py  view_model.py
chapter2_demand_forecasting_with_ml/demand_forecasting/data_client/: Dockerfile  pyproject.toml  requirements.txt  setup.py
chapter2_demand_forecasting_with_ml/demand_forecasting/data_client/data_client/: data_client.py
chapter2_demand_forecasting_with_ml/demand_forecasting/data_manager/: Dockerfile  pyproject.toml  requirements.txt  run.sh
chapter2_demand_forecasting_with_ml/demand_forecasting/data_manager/src/: configurations.py  constants.py  initialize.py  main.py
chapter2_demand_forecasting_with_ml/demand_forecasting/evaluate/: Dockerfile  pyproject.toml  requirements.txt
chapter2_demand_forecasting_with_ml/demand_forecasting/predict/: Dockerfile  pyproject.toml  requirements.txt
chapter2_demand_forecasting_with_ml/demand_forecasting/train/: Dockerfile  pyproject.toml
chapter2_demand_forecasting_with_ml/stage0/bi/: Dockerfile  pyproject.toml  requirements.txt
chapter2_demand_forecasting_with_ml/stage0/bi/src/: configurations.py  logger.py  main.py  model.py  schema.py  service.py  view.py  view_model.py
chapter2_demand_forecasting_with_ml/stage0/ml/: Dockerfile  Dockerfile.mlflow  pyproject.toml  requirements.txt
chapter2_demand_forecasting_with_ml/stage0/ml/hydra/: 2020_52.yaml  2021_03.yaml  2021_04.yaml  2021_31.yaml  2021_32.yaml  default.yaml
chapter2_demand_forecasting_with_ml/stage0/ml/src/: configurations.py  main.py
chapter3_4_aianimals/ab_test_proxy/: Dockerfile  pyproject.toml  requirements.txt
chapter3_4_aianimals/ab_test_proxy/ab_test_configurations/: sample.yaml
chapter3_4_aianimals/ab_test_proxy/src/: configurations.py  constants.py  main.py
chapter3_4_aianimals/ab_test_proxy/src/exceptions/: custom_exceptions.py
chapter3_4_aianimals/ab_test_proxy/src/middleware/: json.py
chapter3_4_aianimals/ab_test_proxy/src/proxy/: proxy.py
chapter3_4_aianimals/ab_test_proxy/src/registry/: container.py
chapter3_4_aianimals/ab_test_proxy/src/schema/: base_schema.py
chapter3_4_aianimals/ab_test_proxy/src/service/: ab_test_service.py  animal_ab_test_service.py  random_ab_test_service.py  user_ab_test_service.py
chapter3_4_aianimals/api/: Dockerfile  pyproject.toml  requirements.txt
chapter3_4_aianimals/api/secrets/: create_secret.py
chapter3_4_aianimals/api/src/: configurations.py  constants.py  main.py
chapter3_4_aianimals/api/src/api/: access_log.py  animal.py  animal_category.py  like.py  metadata.py  violation.py
chapter3_4_aianimals/api/src/entities/: access_log.py  animal.py  animal_category.py  animal_subcategory.py  violation.py
chapter3_4_aianimals/api/src/exceptions/: custom_exceptions.py
chapter3_4_aianimals/api/src/infrastructure/: cache.py  database.py  messaging.py  queue.py  search.py  storage.py
chapter3_4_aianimals/api/src/middleware/: assert_token.py  crypt.py  file_reader.py  strings.py
chapter3_4_aianimals/api/src/registry/: container.py
chapter3_4_aianimals/api/src/repository/: access_log_repository.py  animal_category_repository.py  animal_repository.py  animal_subcategory_repository.py  like_repository.py  user_repository.py  violation_repository.py  violation_type_repository.py
chapter3_4_aianimals/api/src/request_object/: access_log.py  animal.py  animal_category.py  animal_subcategory.py  like.py  violation.py  violation_type.py
chapter3_4_aianimals/api/src/response_object/: animal.py  animal_subcategory.py  metadata.py  user.py
chapter3_4_aianimals/api/src/schema/: access_log.py  animal_category.py  animal_subcategory.py  table.py  violation.py
chapter3_4_aianimals/api/src/service/: learn_to_rank.py  local_cache.py  similar_image_search.py
chapter3_4_aianimals/api/src/usecase/: access_log_usecase.py  animal_category_usecase.py  animal_usecase.py  (+6 more)
chapter3_4_aianimals/backend/: Dockerfile  pyproject.toml  requirements.txt  run.sh
chapter3_4_aianimals/backend/secrets/: .gitignore  secret.key
chapter3_4_aianimals/backend/src/: configurations.py  constants.py  initialize.py  main.py
chapter3_4_aianimals/base_text_processing/: Dockerfile  pyproject.toml  requirements.txt
chapter3_4_aianimals/batch/data_registry/: Dockerfile  pyproject.toml  requirements.txt
chapter3_4_aianimals/batch/similar_word_registry/: Dockerfile  pyproject.toml  requirements.txt
chapter3_4_aianimals/data_manager/: Dockerfile  pyproject.toml
chapter3_4_aianimals/data_manager/src/: configurations.py  initialize.py  main.py
chapter3_4_aianimals/edge_ai/model_personalization/: Dockerfile  pyproject.toml  requirements.txt
chapter3_4_aianimals/gate_keeper/: Dockerfile  pyproject.toml  requirements.txt
chapter3_4_aianimals/gate_keeper/src/: configurations.py  main.py
chapter3_4_aianimals/ml/model_management/: pyproject.toml
chapter3_4_aianimals/ml/similarity_search/: pyproject.toml
chapter3_4_aianimals/violation_detection/no_animal_violation/: pyproject.toml  requirements.txt
chapter3_4_aianimals/violation_detection/portal/: Dockerfile  logging.ini  pyproject.toml  requirements.txt
chapter3_4_aianimals/violation_detection/registry/: Dockerfile  pyproject.toml  requirements.txt
(+1426 files in other folders)
