[tool.poetry]
name = "aianimals"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
psycopg2-binary = "^2.9.2"
redis = "^4.0.2"
cryptography = "^36.0.1"
pika = "^1.2.0"
google-cloud-storage = "^2.1.0"
elasticsearch = {extras = ["async"], version = "^8.0.1"}
httpx = "^0.22.0"
dependency-injector = "^4.39.1"
starlette-prometheus = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
