[tool.poetry]
name = "backend"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
google-cloud-storage = "^1.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
