[tool.poetry]
name = "api"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lightgbm = "^3.3.2"
cloudpickle = "^2.0.0"
onnx = "^1.11.0"
mecab-python3 = "^1.0.5"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
