[tool.poetry]
name = "gate_keeper"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.7"
redis = "^4.0.2"
httpx = "^0.21.1"
pydantic = "^1.8.2"
elasticsearch = {extras = ["async"], version = "^7.16.0"}
click = "^8.0.3"
SQLAlchemy = "^1.4.28"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
