[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "evaluate"
version = "0.0.0"

[tool.poetry.dependencies]
python = "3.9"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
