[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "bi"
version = "0.0.0"

[tool.poetry.dependencies]
httpx = "^0.19.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
pydantic = "^1.8.2"
python = "3.9.5"
requests = "^2.26.0"
streamlit = "^0.88.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
