[tool.poetry]
name = "bi"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
plotly = "^5.3.1"
pandas = "^1.3.4"
streamlit = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
