[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "data_manager"
version = "0.0.0"

[tool.poetry.dependencies]
pydantic = "^1.8.2"
python = "3.9"
streamlit = "^0.88.0"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
