[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "predict"
version = "0.0.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.23"
nptyping = "^1.4.4"
numpy = "^1.21.2"
onnx = "^1.10.1"
onnxruntime = "^1.8.1"
pandas = "^1.3.3"
pandera = "^0.7.1"
pydantic = "^1.8.2"
python = "3.9,<3.10"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
