[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "train"
version = "0.0.0"

[tool.poetry.dependencies]
click = "^8.0.1"
dvc = "^2.7.4"
nptyping = "^1.4.4"
numpy = "^1.21.2"
pandas = "^1.3.3"
pandera = "^0.7.1"
pydantic = "^1.8.2"
python = "3.9,<3.10"
scikit-learn = "^0.24.2"
lightgbm = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
