[tool.poetry]
name = "bi"
version = "0.0.0"
description = ""
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
pydantic = "^1.8.2"
pandas = "^1.3.4"
plotly = "^5.4.0"
pandera = "^0.8.0"
streamlit = "^1.2.0"
dependency-injector = "^4.39.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
