[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "train"
version = "0.0.0"

[tool.poetry.dependencies]
dvc = "^2.7.4"
lightgbm = "^3.2.1"
nptyping = "^1.4.4"
numpy = "^1.21.2"
pandas = "^1.3.3"
pandera = "^0.7.1"
pydantic = "^1.8.2"
python = "3.9.7"
scikit-learn = "1.0"
scipy = "^1.7.1"
onnxruntime = "^1.9.0"
onnx = "^1.10.1"
onnxmltools = "^1.9.1"
httpx = "^0.19.0"
optuna = "^2.10.0"
mlflow = "^1.20.2"
hydra-core = "^1.1.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
