[tool.poetry]
name = "ml"
version = "0.0.0"
description = ""
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.4"
pandas = "^1.3.4"
pandera = "^0.8.0"
nptyping = "^1.4.4"
lightgbm = "^3.3.1"
scikit-learn = "^1.0.1"
optuna = "^2.10.0"
mlflow = "^1.21.0"
hydra-core = "^1.1.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
