[tool.poetry]
name = "aianimals"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.7"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
elasticsearch = {extras = ["async"], version = "^7.16.2"}
click = "^8.0.3"
httpx = "^0.21.3"
pika = "^1.2.0"
numpy = "^1.22.2"
pandas = "^1.4.1"
gsutil = "^5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
