[tool.poetry]
name = "similarity_search"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.7"
tensorflow = "^2.7.0"
tensorflow-similarity = "^0.14.11"
numpy = "^1.22.0"
click = "^8.0.3"
mlflow = "^1.22.0"
Pillow = "^9.0.0"
google-cloud-storage = "^1.44.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
