[tool.poetry]
name = "violation_detection"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
click = "^8.0.3"
hydra-core = "^1.1.1"
mlflow = "^1.23.1"
nptyping = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
