[tool.poetry]
name = "controller"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
pika = "^1.2.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
click = "^8.0.3"
dependency-injector = "^4.39.1"
prometheus-client = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
