[tool.poetry]
name = "api"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pandas = "^1.4.1"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"
uvicorn = "^0.17.5"
gunicorn = "^20.1.0"
fastapi = "^0.74.0"
redis = "^4.1.4"
onnxruntime = "^1.10.0"
mlflow = "^1.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
