[tool.poetry]
name = "learn_to_rank"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
numpy = "^1.22.2"
pandas = "^1.4.0"
lightgbm = "^3.3.2"
onnx = "^1.10.2"
skl2onnx = "^1.10.4"
onnxruntime = "^1.10.0"
onnxmltools = "^1.10.0"
mecab-python3 = "^1.0.4"
SQLAlchemy = "^1.4.31"
pydantic = "^1.9.0"
mlflow = "^1.23.1"
hydra-core = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
